--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,13 @@
-<% provide(:title, 'Help') %>
-<h1>Sample App</h1>
-<p>
-  This is the help page for the
-  <a href="http://localhost:3000/">Twister App POC</a>
-  sample application.
-</p>
+<div class="center hero-unit">
+  <h1>Twister POC Home</h1>
+
+  <h2>
+    This is the Help page for the
+    <a href="http://localhost:3000/">Twister App POC</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("twisterlogo.png", alt: "Twister Data"), 'http://twisterdatatechnologies.com/' %>
