updated routes, added users controller and signup

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, 'Help') %>
 <div class="center hero-unit">
   <h1>Twister POC Home</h1>
 
@@ -7,7 +8,6 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("twisterlogo.png", alt: "Twister Data"), 'http://twisterdatatechnologies.com/' %>
